--- a/Xky.Platform/Pages/Login.xaml
+++ b/Xky.Platform/Pages/Login.xaml
@@ -24,6 +24,11 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center">
+                <UserControl:MyTextBox x:Name="Username" Height="41" Width="314" CornerRadius="5"
+                                       Background="{StaticResource BackgroundColor1}"
+                                       Foreground="White" WaterText="用户名" />
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center">
                 <UserControl:MyTextBox x:Name="LicenseKey" Height="41" Width="314" CornerRadius="5"
                                        Background="{StaticResource BackgroundColor1}"
                                        Foreground="White" WaterText="请输入32位授权码" />
@@ -31,7 +36,7 @@
                                       Image="/Xky.Platform;component/Resources/Icon/btn_login.png" Image_Height="12"
                                       Image_Width="12" />
             </StackPanel>
-            <TextBlock Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Foreground="White"
+            <TextBlock Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" Foreground="White"
                        Text="本开源程序为侠客SDK演示DEMO，需要先获取开发授权码才能使用，授权码请访问https://www.xky.com免费申请" Margin="0,20,0,0" />
         </Grid>
         <Grid x:Name="GridInfo" Background="{StaticResource BackgroundColor4}" Margin="0" Visibility="Collapsed">
